--- a/H.html
+++ b/H.html
@@ -27,14 +27,28 @@
         float: right;
       }
 
-      #popup {
+      #popupDeath {
         display: none;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        background-color: #fff;
-        border: 1px solid #000;
+        background-color: #000000;
+        border: 1px solid #ffffff;
+        color: #ffffff;
+        padding: 20px;
+        z-index: 1;
+        width: 70%;
+      }
+      #popupEnd {
+        display: none;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: #000000;
+        border: 1px solid #ffffff;
+        color: #ffffff;
         padding: 20px;
         z-index: 1;
         width: 70%;
@@ -43,10 +57,18 @@
   </head>
   <body>
     <h1><center>Unknow House</center></h1>
-    <div id="popup">
+    <div id="popupDeath">
       <center>
         <center><a style="font-size: large;">死</a></center>
       <a>D E A T H</a>
+      <p>text</p>
+      <button onclick="reloadPage()"> reset </button>
+      </center>
+    </div>
+    <div id="popupEnd">
+      <center>
+        <center><a style="font-size: large;">END</a></center>
+      <a>END</a>
       <p>text</p>
       <button onclick="reloadPage()"> reset </button>
       </center>
